changes to app.js and index.hbs for forms, email does not work right yet_part 2

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -36,7 +36,7 @@
     <input type="text" name="input-lname" id="input-lname">
 
     <label for="input-email">Email: </label>
-    <input type="number" name="input-email" id="input-email">
+    <input type="text" name="input-email" id="input-email">
 
 
     <input type="submit">
@@ -56,7 +56,7 @@
     <input type="text" name="input-lname" id="input-lname">
 
     <label for="input-email">Email: </label>
-    <input type="number" name="input-email" id="input-email">
+    <input type="text" name="input-email" id="input-email">
 
 
     <input type="submit">
