--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,8 +2,8 @@
 <h1>The server is running!</h1>
 <p>If you see this text, the server is <strong>definitely</strong> working!</p>
 
-<table  border="1" cellpadding="5">
 
+<table id="CustomersTable" border="1" cellpadding="5">
     <thead>
         <tr>
             {{#each data.[0]}}
@@ -26,22 +26,27 @@
     </tbody>
 </table>
 
-<h2>Adding Data with AJAX</h2>
-<p>To add a new person, please enter their information below and click 'Submit'!</p>
-<form id="add-person-form-ajax">
-    <label for="input-fname">First Name: </label>
-    <input type="text" name="input-fname" id="input-fname">
-    
-    <label for="input-lname">Last Name: </label>
-    <input type="text" name="input-lname" id="input-lname">
-
-    <label for="input-email">Email: </label>
-    <input type="text" name="input-email" id="input-email">
-
+<h2>Search Using an HTML Form</h2>
+<p>Search by last name using the field below. Partial last names are OK too!</p>
+<form id="search-customer-html" method='GET' action='/'>
+    <label for="input-lname">Search by Last Name: </label>
+    <input type="text" name="lname" id="input-lname-html-search">
 
     <input type="submit">
+    <a href='/'><button>Reset</button></a>
 </form>
 
-{{!-- Embed our javascript to handle the DOM manipulation and AJAX request --}}
-<script src="./js/add_person.js"></script>
 
+{{!--Create form to add data--}}
+<h2>Add Customer via AJAX</h2>
+<p>Add new customers by entering their information below and then clcik Submit</p>
+<form id="addCustomer-AJAX-form">
+    <legend><strong>Add Customer</strong></legend>
+        <fieldset class="fields">
+        <label for="input-fname"> First Name: </label> <input type="text" name="input-fname" id="input-fname" >
+        <label for="input-lname"> Last Name: </label> <input type="text" name="input-lname" id="input-lname">
+        <label for="input-email"> Email: </label> <input type="text" name="input-email" id="input-email">
+    </fieldset>
+        <input type="submit">
+	</form>
+<script src="./js/add_customer.js"></script>
