--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,81 +1,5 @@
 <!-- index.hbs -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<h1>Customers</h1>
-<p>This is the functional page for the Customers table and its interactions.</p>
-
-
-<table id="CustomersTable" border="1" cellpadding="5">
-    <thead>
-        <tr>
-            {{#each data.[0]}}
-            <th>
-                {{@key}}
-            </th>
-            {{/each}}
-            <th>DELETE</th>
-        </tr>
-    </thead>
-
-    <tbody>
-        {{#each data}}
-        <tr data-value={{this.cust_ID}}>
-            <td>{{this.cust_ID}}</td>
-            <td>{{this.cust_first_name}}</td>
-            <td>{{this.cust_last_name}}</td>
-            <td>{{this.cust_email}}</td>
-            <td><button onclick="deleteCustomer({{this.cust_ID}})">Delete</button></td>
-        </tr>
-        {{/each}}
-    </tbody>
-</table>
-<script src="./js/delete_customer.js"></script>
-
-
-<h2>Search Using an HTML Form</h2>
-<p>Search by last name using the field below. Partial last names are OK too!</p>
-<form id="search-customer-html" method='GET' action='/'>
-    <label for="input-lname">Search by Last Name: </label>
-    <input type="text" name="lname" id="input-lname-html-search">
-
-    <input type="submit">
-    <a href='/'><button>Reset</button></a>
-</form>
-
-
-{{!--Create form to add data--}}
-<h2>Add Customer via AJAX</h2>
-<p>Add new customers by entering their information below and then clcik Submit</p>
-<form id="addCustomer-AJAX-form">
-    <legend><strong>Add Customer</strong></legend>
-        <fieldset class="fields">
-        <label for="input-fname"> First Name: </label> <input type="text" name="input-fname" id="input-fname" >
-        <label for="input-lname"> Last Name: </label> <input type="text" name="input-lname" id="input-lname">
-        <label for="input-email"> Email: </label> <input type="text" name="input-email" id="input-email">
-    </fieldset>
-        <input type="submit">
-	</form>
-<script src="./js/add_customer.js"></script>
-
-{{!--Create form to update data--}}
-<h2>Updating A Customer's Data</h2>
-<p>To update a specific Customer's data select their name from the drop-down menu and then change their name or email wtih the text boxes.</p>
-<form id="updateCustomer-AJAX-form">
-<legend><strong>Update Customer Info</strong></legend>
-    <fieldset class="fields">
-        <label for="input-fullname">Full Name: </label>
-        <select name="input-fullname" id="mySelect">
-            <option value="test">Select a Customer</option>
-            {{#each data}}
-            <option value="{{this.cust_ID}}">{{this.cust_first_name}} {{this.cust_last_name}}</option>
-            {{/each}}
-        </select>
-    <fieldset class="fields">
-        <label for="input-fname-update"> EDIT First Name: </label> <input type="text" name="input-fname-update" id="input-fname-update" >
-        <label for="input-lname-update"> EDIT Last Name: </label> <input type="text" name="input-lname-update" id="input-lname-update" >
-        <label for="input-email-update"> EDIT Email: </label> <input type="text" name="input-email-update" id="input-email-update" >
-    </fieldset>
-    </fieldset>
-    <input type="submit">
-</form>
-
-<script src="./js/update_customer.js"></script>
+<h1>HOME</h1>
+<p>This is the Home page for TXNM Rangers.</p>
+[ <a href="index">Home</a> | <a href="customers">Customers</a> |<a href="developers">Developer</a> | <a href="genres">Genres</a> | <a href="games">Games</a>| <a href="purchases">Purchases</a>]
