--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,4 @@
 <!-- index.hbs -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<h1>HOME</h1>
-<p>This is the Home page for TXNM Rangers.</p>
-[ <a href="index">Home</a> | <a href="customers">Customers</a> |<a href="developers">Developer</a> | <a href="genres">Genres</a> | <a href="games">Games</a>| <a href="purchases">Purchases</a>]
+<h1>Home</h1>
+<p >This is the Home page for TXNM Rangers.</p>
