--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -2,13 +2,23 @@
 
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" type="text/css" href="/css/Main.css">
 <head>
     <meta charset="utf-8">
     <title>Example App</title>
+
 </head>
 <body>
+[ 
+<a href="index">Home</a> | 
+<a href="customers">Customers</a> | 
+<a href="developers">Developer</a> | 
+<a href="genres">Genres</a> | 
+<a href="games">Games</a> | 
+<a href="purchases">Purchases</a> ]
 
+<div  id="bgimg" id="lightcolortext">
     {{{body}}}
-
+</div>
 </body>
 </html>
