working update on fixing query for dropdown

--- a/views/games.hbs
+++ b/views/games.hbs
@@ -66,7 +66,7 @@
         <label for="input-devname"> Developer: </label>
             <select name="input-devname" id="selected_devname">
                     <option value="test">Select a developer</option>
-                    {{#each data}}
+                    {{#each developer}}
                     <option value="{{this.dev_ID}}">{{this.dev_name}}</option>
                     {{/each}}
             </select>
