--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -12,7 +12,7 @@
 [ 
 <a href="index">Home</a> | 
 <a href="customers">Customers</a> | 
-<a href="developers">Developer</a> | 
+<a href="developers">Developers</a> | 
 <a href="genres">Genres</a> | 
 <a href="games">Games</a> | 
 <a href="purchases">Purchases</a> ]
